# simple-auth-app

./: .env.example  LICENSE  README.md  docker-compose.yml
.circleci/: config.yml
simple-auth-be/: Dockerfile  pyproject.toml
simple-auth-be/src/: main.py
simple-auth-be/src/core/: database.py  security.py
simple-auth-be/src/features/auth/: dependencies.py  models.py  router.py  schemas.py  service.py
simple-auth-be/tests/: conftest.py  test_auth.py
simple-auth-fe/: Dockerfile  index.html  package.json
simple-auth-fe/src/: App.tsx
simple-auth-fe/src/core/: AuthContext.tsx  api.ts
simple-auth-fe/src/features/auth/: AuthPage.tsx  Dashboard.tsx
